--- a/.github/workflows/sync_to_ghcr.yml
+++ b/.github/workflows/sync_to_ghcr.yml
@@ -35,6 +35,8 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }} #此值是github专为Action提供的,这就是上一步没有手动添加的原因
+      - name: Clear Poetry cache
+        run: poetry cache:clear --all
       - name: Build && Push
         uses: docker/build-push-action@v2
         with:
