--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ package-mode = false
 [[tool.poetry.source]]
 name = "tsinghua"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple"
-priority = "default"
+priority = "primary"
 
 
 [tool.poetry.dependencies]
